tests/ui/never_patterns/check.stderr
error: a guard on a never pattern will never be run
  --> $DIR/check.rs:18:20
   |
LL |         Some(!) if true,
   |                    ^^^^ help: remove this guard

error: aborting due to 1 previous error

